# UnNetHack

./: .editorconfig  .gitignore  .travis.yml  CURSES_BUGS  ChangeLog  Makefile  Porting  README  README-curses.txt  README-lisp.txt  README.configure  README.md  TODO  azure-pipelines.yml  build.sbt  configure  loop.sh  unnethack.doxygen
.github/workflows/: unnethack.yml
dat/: Arc-fila.lua  Arc-filb.lua  Arc-goal.lua  Arc-loca.lua  Arc-strt.lua  Arch.des  Bar-fila.lua  Bar-filb.lua  Bar-goal.lua  Bar-strt.lua  Barb.des  Caveman.des  Convict.des  Healer.des  Knight.des  Mon-fila.lua  Mon-loca.lua  Mon-strt.lua  Monk.des  Priest.des  Ran-strt.lua  Ranger.des  Rogue.des  Samurai.des  Tourist.des  Val-fila.lua  Val-filb.lua  Val-goal.lua  Val-loca.lua  Val-strt.lua  Valkyrie.des  Wizard.des  advcal.des  bigroom.des  blkmar.des  castle.des  cmdhelp  data.base  dragons.des  dungeon.def  (+29 more)
debian/: changelog  control  copyright  rules  watch
debian/patches/: debian_build.diff  series
doc/: Guidebook.mn  Guidebook.tex  Guidebook.txt  README-convict.txt  README.menucolor  README.new_lev_comp  README.nh343  README.statuscolors  nethack.6  nethack.txt  recover.6  recover.txt  sheol.txt  window.doc  xlog.readme
include/: align.h  amiconf.h  artifact.h  artilist.h  attrib.h  beconf.h  bitmfile.h  botl.h  color.h  config.h  config1.h  context.h  coord.h  cstd.h  decl.h  def_os2.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  emin.h  engrave.h  epri.h  eshk.h  extern.h  flag.h  func_tab.h  global.h  hack.h  hacklib.h  integer.h  isaac.h  lev.h  lint.h  load_img.h  mac-carbon.h  mac-qt.h  mac-term.h  macconf.h  (+67 more)
src/: Makefile  allmain.c  alloc.c  apply.c  artifact.c  attrib.c  ball.c  base32.c  bones.c  botl.c  cmd.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dump.c  dungeon.c  eat.c  end.c  engrave.c  exper.c  explode.c  extralev.c  files.c  fountain.c  hack.c  hacklib.c  insight.c  invent.c  light.c  (+83 more)
src/main/scala/: Align.scala  Artifact.scala  Artilist.scala  Attrib.scala  C2Scala.scala  Color.scala  Config.scala  Coord.scala  Decl.scala  Dungeon.scala  EDog.scala  EMin.scala  EPri.scala  EShk.scala  Engrave.scala  Flag.scala  Global.scala  Hack.scala  Lev.scala  Mail.scala  MfndPos.scala  MkRoom.scala  MonAttk.scala  MonData.scala  MonFlag.scala  MonSym.scala  Monst.scala  ONames.scala  Obj.scala  ObjClass.scala  PatchLevel.scala  PerMonst.scala  Pm.scala  Prop.scala  QText.scala  Quest.scala  Rect.scala  Rip.scala  Rm.scala  Rnd.scala  (+12 more)
sys/: README
sys/autoconf/: Install.ac  Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  acinclude.m4  autoconf.hin  bootstrap.sh  build_win32.sh  config.guess  config.sub  configure.ac  depend.awk  install-sh
sys/autoconf/m4/: ax_define_integer_bits.m4  ax_lua.m4
sys/share/: NetHack.cnf  cppregex.cpp  dgn_lex.c  dgn_yacc.c  ioctl.c  lev_comp.h  lev_lex.c  lev_yacc.c  nhlan.c  pcmain.c  pcsys.c  pctty.c  pcunix.c  pmatchregex.c  posixregex.c  random.c  tclib.c  unixtty.c  uudecode.c
sys/share/sounds/: Bell  Bugle  Drum_Of_Earthquake  Fire_Horn  Frost_Horn  Leather_Drum  Magic_Flute  Magic_Harp  Tooled_Horn  Wooden_Flute  Wooden_Harp
sys/unix/: Install.unx  Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  README.linux  defaults.nh  nethack.sh  snd86unx.shr  testing.c  unixmain.c  unixres.c  unixunix.c
sys/unsupported/amiga/: amidos.p  amirip.c  amitty.c  amiwind.c  amiwind.p  winami.c  winami.p  winfuncs.c
sys/unsupported/atari/: tos.c
sys/unsupported/mac/: macfile.c  macmain.c  macwin.c  mgetline.c
sys/unsupported/msdos/: Install.dos  Makefile.GCC  Makefile.MSC  NHAccess.nh  msdos.c  msdoshlp.txt  ovlinit.c  pckeys.c  pctiles.h  pcvideo.h  tile2bin.c  video.c  vidtxt.c  vidvga.c
sys/unsupported/os2/: Install.os2  os2.c
sys/unsupported/vms/: Install.vms  Makefile.src  vmsmail.c  vmsmain.c  vmstty.c  vmsunix.c
sys/unsupported/wince/: bootstrp.mak  mhstatus.c  winhack.c  winmain.c
sys/windows/: Install.nt  Makefile.bcc  Makefile.gcc  Makefile.msc  console.rc  cursmake.gcc  nethack.def  nh340key.c  nhdefkey.c  windsys.c
sys/winnt/: Install.nt  Makefile.bcc  Makefile.gcc  Makefile.msc  console.rc  cursmake.gcc  defaults.nh  mapimail.c  nethack.def  nh340key.c  nhdefkey.c  nhraykey.c  nhsetup.bat  ntsound.c  nttty.c  win32api.h  winnt.c
tests/: Makefile  rakefile
tests/hacklib/: mocks.h  test_hacklib.c
tests/lib/: unnethack.rb
tests/options/: Makefile  mocks.h  test_base32.c  test_options.c
tests/spec/: naming.rb  wishing_spec.rb
tests/unicode/: Makefile  mocks.h  test_unicode.c
tests/wishing/: Makefile  mocks.h  test_wishing.c
tilesets/: README
util/: Makefile  dgn_comp.l  dgn_comp.y  dgn_main.c  dlb_main.c  lev_comp.l  lev_comp.y  lev_main.c  makedefs.c  panic.c  recover.c
win/X11/: Install.X11  Window.c  tile2x11.c  winX.c  winmap.c  winmenu.c  winmesg.c  winmisc.c  winstat.c  wintext.c  winval.c
win/curses/: Bugs.txt  Readme.txt  Todo.txt  cursdial.c  cursdial.h  curses-readme.txt  curses-todo.txt  cursinit.c  cursinit.h  cursinvt.c  cursmain.c  cursmesg.c  cursmesg.h  cursmisc.c  cursmisc.h  cursstat.c  cursstat.h  curswins.c  curswins.h
win/dummy/: dummy_graphics.c  dummy_graphics.h
win/gnome/: gnmain.c
win/lisp/: ChangeLog  winlisp.c
win/share/: gifread.c  monsters.txt  objects.txt  other.txt  ppmwrite.c  thintile.c  tile.h  tile2bmp.c  tilemap.c  tiletext.c
win/tty/: getline.c  termcap.c  topl.c  wintty.c
win/unsupported/: README
win/unsupported/Qt/: qt_win.cpp
win/unsupported/gem/: wingem.c  wingem1.c
win/unsupported/gnome/: gnbind.c  gnmain.c  gnstatus.c  gnworn.c
win/win32/: NetHackW.c  NetHackW.rc  dgncomp.dsp  dgnstuff.dsp  dlb_main.dsp  levcomp.dsp  levstuff.dsp  makedefs.dsp  mhdlg.c  mhfont.c  mhmain.c  mhmap.c  mhmenu.c  mhmsg.h  mhrip.c  mhsplash.c  mhstatus.c  mswproc.c  nethack.dsw  nethackw.dsp  recover.dsp  resource.h  tile2bmp.dsp  tilemap.dsp  tiles.dsp  winMS.h  winhack.c  winhack.rc
